--- a/ColorChanger/Properties/Resources.resx
+++ b/ColorChanger/Properties/Resources.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="SettingsPath" xml:space="preserve">
-    <value>./Settings.json</value>
+  <data name="AppSettingsPath" xml:space="preserve">
+    <value>./AppSettings.json</value>
   </data>
 </root>
