--- a/ColorChanger/Properties/Resources.resx
+++ b/ColorChanger/Properties/Resources.resx
@@ -117,10 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AppSettingsPath" xml:space="preserve">
-    <value>./AppSettings.json</value>
-  </data>
-  <data name="DefaultColors" xml:space="preserve">
-    <value>#FF0000 #FF005A #FF00B4 #F000FF #9600FF #3C00FF #001EFF #0078FF #00CDFF #00FFD7 #00FF7D #00FF23 #37FF00 #91FF00 #EBFF00 #FFBE00 #FF6400 #FF0F00</value>
+  <data name="SettingsPath" xml:space="preserve">
+    <value>./Settings.json</value>
   </data>
 </root>
